--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "build": "webpack --config ./server/webpack.config.js"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "backbone": "^1.4.0",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "helmet": "^3.10.0",
+    "jquery": "^3.3.1",
     "js-md5": "^0.7.3",
     "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
@@ -23,11 +27,14 @@
     "loopback-connector-mongodb": "^3.9.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-router-dom": "^4.3.1",
     "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^3.0.0"
+    "strong-error-handler": "^3.0.0",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
