--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@mdi/js": "^3.5.95",
+    "@mdi/react": "^1.1.0",
     "axios": "^0.18.0",
     "backbone": "^1.4.0",
     "compression": "^1.0.3",
